Fixed: modal tabs and z-index

--- a/Client/web-ui/src/components/MapView/Map.module.scss
+++ b/Client/web-ui/src/components/MapView/Map.module.scss
@@ -4,7 +4,7 @@
 .Map {
   grid-area: 1 / 1 / end / end;
   height: 100%;
-  z-index: 2;
+  z-index: 1;
 }
 
 .Loading {
